correct alignments in all mobile and tablet views

--- a/css/index.css
+++ b/css/index.css
@@ -417,7 +417,7 @@ footer.home-page p {
 }
 .middle-content-1 p {
   padding: 4rem 5rem;
-  text-align: center!important;
+  text-align: center;
   font-size: 2rem;
   color: #2c2c2c;
 }
@@ -449,6 +449,7 @@ footer.home-page p {
 .middle-content-2 {
   display: flex;
   padding: 2rem 0;
+  padding-top: 4rem;
 }
 .middle-content-2 img {
   width: 220rem;
@@ -471,6 +472,9 @@ footer.home-page p {
   font-size: 1.7rem;
 }
 @media (max-width: 800px) {
+  .middle-content-2 {
+    padding-top: 4rem;
+  }
   .middle-content-2 img {
     width: 300rem;
     height: 32rem;
@@ -494,8 +498,11 @@ footer.home-page p {
   .middle-content-2 .subclass-1 {
     padding-top: 3rem;
   }
+  .middle-content-2 .subclass-1 h1 {
+    padding-left: 1rem;
+  }
   .middle-content-2 p {
-    text-align: center;
+    text-align: justify;
   }
 }
 .middle-content-3 {
@@ -558,6 +565,10 @@ footer.home-page p {
   .middle-content-3 .subclass-2 {
     padding-top: 3rem;
   }
+  .middle-content-3 .subclass-2 p {
+    text-align: justify;
+    width: 45rem;
+  }
 }
 .middle-content-4 {
   display: flex;
@@ -602,6 +613,9 @@ footer.home-page p {
   .middle-content-4 .sub-class-3 {
     padding-top: 3rem;
   }
+  .middle-content-4 .sub-class-3 p {
+    text-align: justify;
+  }
 }
 .middle-content-5 {
   display: flex;
@@ -610,10 +624,6 @@ footer.home-page p {
   text-align: center;
   padding-bottom: 5rem;
   background: #e6dbdb;
-}
-.middle-content-5 img {
-  width: 80rem;
-  border-radius: 2rem;
 }
 .middle-content-5 .sub-class-4 {
   display: flex;
@@ -634,18 +644,12 @@ footer.home-page p {
   .middle-content-5 {
     padding: none;
   }
-  .middle-content-5 img {
-    display: none;
-  }
 }
 @media (max-width: 500px) {
   .middle-content-5 {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  .middle-content-5 img {
-    width: 45rem;
   }
 }
 #party-details {
