--- a/less/home-page.less
+++ b/less/home-page.less
@@ -44,6 +44,7 @@
         }
         p {
             font-size: 1.5rem;
+            
         }   
     }
 }
@@ -61,7 +62,7 @@
     }
     p {
         padding: 4rem 5rem;
-        text-align:center!important;
+        text-align:center;
         color: #2c2c2c;
         font-size: 2rem;
         color:#2c2c2c;
@@ -88,10 +89,12 @@
    
     }
     @media @mobile {
+        
         a {
             margin: 0 15rem;
             padding: 2rem;
         }
+        
     }
 }
 
@@ -99,6 +102,7 @@
 .middle-content-2 {
     display: flex;
     padding: 2rem 0;
+    padding-top: 4rem;
     img {
         width: 220rem;
         border-radius: 2rem;
@@ -120,6 +124,7 @@
         }
     }
     @media @tablet {
+        padding-top: 4rem;
         img {
             width: 300rem;
             height: 32rem
@@ -140,9 +145,12 @@
         }
         .subclass-1 {
             padding-top: 3rem;
+            h1 {
+                padding-left: 1rem;
+            }
         }
         p {
-            text-align: center;
+            text-align: justify;
         }
     }
 }
@@ -202,6 +210,10 @@
         }
         .subclass-2 {
             padding-top: 3rem;
+            p {
+                text-align: justify;
+                width: 45rem;
+            }
         }
     }
 }
@@ -243,6 +255,8 @@
         }
         .sub-class-3 {
             padding-top: 3rem;
+        p {
+            text-align: justify;        }
         }
     }
 }
@@ -254,11 +268,7 @@
     text-align: center;
     padding-bottom: 5rem;
     background:#e6dbdb;
-    
-    img {
-        width: 80rem;
-        border-radius: 2rem;
-    }
+
     .sub-class-4 {
         display: flex;
         flex-direction: column;
@@ -276,9 +286,6 @@
     }
 
     @media @tablet {
-        img {
-            display: none;
-        }
         padding: none;
     }
 
@@ -286,10 +293,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        img {
-
-            width: 45rem;
-        }
+    
     }
 }
 
